Challenge1/alpha-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: alpha-xyz
  name: alpha-svc
  namespace: alpha
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: alpha-xyz
  type: ClusterIP
status:
  loadBalancer: {}
