Challenge1/external-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: external-network-policy
  namespace: alpha
spec:
  podSelector:
    matchLabels:
      app: external
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: alpha-xyz
    ports:
    - protocol: TCP
      port: 80
